# wikiparse-rs

./: AGENTS.md  Cargo.toml  LICENSE.txt  README.md  mise.toml
src/: lib.rs  main.rs  sql_parsing.rs
src/commands/: export_csv.rs  export_json.rs  mod.rs  redis.rs  wikigraph_redis.rs  wikigraph_valkey.rs
src/outputs/: csv.rs  json.rs  mod.rs  redis.rs
src/parsers/: generic.rs  linktarget.rs  mod.rs  page.rs  pagelinks.rs  schema.rs
